feat: enable token auth